--- a/simulation_LAB1.ipynb
+++ b/simulation_LAB1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrQBoj9GM5GOTIvBVyOP+r",
+      "authorship_tag": "ABX9TyNNDo1jLhgRS9gRfmZMzlrx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -880,16 +880,55 @@
       "metadata": {
         "id": "jbrUApp5vrmT"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Calculate amount of reactants at different time period"
+        "Calculating amount of reactants at different time period:"
       ],
       "metadata": {
         "id": "FDbEmpcexQdt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$\\frac{dC1}{dt} = K2C3 - K1C1C2$$<br>\n",
+        "$$\\frac{dC2}{dt} = K2C3 - K1C1C2$$<br>\n",
+        "$$\\frac{dC3}{dt} = 2K1C1C2 - 2K2C3$$\n"
+      ],
+      "metadata": {
+        "id": "h5pqKjd5uhcS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The simulation uses a time-stepping approach with a small increment\n",
+        "Δ\n",
+        "t\n",
+        "=\n",
+        "0.1\n",
+        "Δt=0.1 and continues until\n",
+        "t\n",
+        "<\n",
+        "10\n",
+        "t<10. At each time step, the concentrations of\n",
+        "C1\n",
+        "C1,\n",
+        "C2\n",
+        "C2, and\n",
+        "C3\n",
+        "C3 are updated using the given rate equations:\n",
+        "\n",
+        "$$C1(t+\\Delta t) = C1(t) + [K2C3(t) - K1C1(t)C2(t)]\\Delta t$$\n",
+        "$$C2(t+\\Delta t) = C2(t) + [K2C3(t) - K1C1(t)C2(t)]\\Delta t$$\n",
+        "$$C3(t+\\Delta t) = C3(t) + [2K1C1(t)C2(t) - 2K2C3(t)]\\Delta t$$\n"
+      ],
+      "metadata": {
+        "id": "H_URUHvCvKJF"
       }
     },
     {
@@ -917,7 +956,7 @@
       "metadata": {
         "id": "17tcoom_v0RL"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -944,7 +983,7 @@
         "id": "pwKrW4vkwW41",
         "outputId": "16a86903-a1b5-40a2-bf1c-4e498e5a7b2e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1046,7 +1085,7 @@
         "id": "l5X_MVnZunJF",
         "outputId": "07d7aad8-6976-4004-d04c-e51e6521c385"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
